--- a/about.html
+++ b/about.html
@@ -15,27 +15,27 @@
   <body>
     <div id="one">
       <!-- Navbar -->
-      <nav id="navbar">
+      <nav class="navbar">
         <div>
           <img
-            id="logo"
+            class="logo"
             src="images\logo.png"
             alt=""
             height="40px"
             width="40px"
           />
         </div>
-        <div id="nav-list">
-          <li><a id="navl" href="">HOME</a></li>
-          <li><a id="navl" href="">SHOP</a></li>
-          <li><a id="navl" href="">ABOUT</a></li>
-          <li><a id="navl" href="">FAQ</a></li>
-          <li><a id="navl" href="">CONTACT</a></li>
+        <div class="nav-list">
+          <li><a class="navl" href="index.html">HOME</a></li>
+          <li><a class="navl" href="shop.html">SHOP</a></li>
+          <li><a class="navl" href="about.html">ABOUT</a></li>
+          <li><a class="navl" href="">FAQ</a></li>
+          <li><a class="navl" href="">CONTACT</a></li>
         </div>
-        <div id="search">
+        <div class="search">
           <img src="images\search.png" alt="" height="20px" width="20px" />
         </div>
-        <div id="cart">
+        <div class="cart">
           <img
             src="images\shopping-bag.png"
             alt=""
@@ -50,7 +50,7 @@
 
     <div id="two">
       <img
-        id="image1"
+        class="image1"
         src="images\image1.jpg"
         alt=""
         width="470px"
@@ -83,7 +83,7 @@
         </div>
       </div>
 
-      <div id="image2">
+      <div class="image2">
         <img src="images\image2.jpg" alt="" width="370px" height="460px" />
       </div>
 
@@ -161,23 +161,23 @@
     <!-- footer -->
     <footer>
       <div id="foot">
-        <div id="foot-1">
+        <div class="foot-1">
           <h1>
             <b>Be the first to Know</b>&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;
           </h1>
         </div>
-        <div id="foot-2">
-          <input id="input" type="text" placeholder="Your Name(Required)" />
+        <div class="foot-2">
+          <input class="input" type="text" placeholder="Your Name(Required)" />
           <br />
           <br />
           <div class="line"></div>
         </div>
-        <div id="foot-3">
-          <input id="input" type="text" placeholder="Your Email(Required)" />
+        <div class="foot-3">
+          <input class="input" type="text" placeholder="Your Email(Required)" />
           <br /><br />
           <div class="line"></div>
         </div>
-        <div id="foot-4">
+        <div class="foot-4">
           <p style="font-size: 12px">
             &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;SEND YOUR MESSAGE
           </p>
@@ -187,7 +187,7 @@
 
       <!-- support -->
       <div id="help">
-        <div id="support">
+        <div class="support">
           <h3>SUPPORT</h3>
           <br />
           <li><a href="">Help</a></li>
@@ -196,7 +196,7 @@
           <li><a href="">Contact us</a></li>
         </div>
 
-        <div id="meet">
+        <div class="meet">
           <h3>MEET MOVEDO</h3>
           <br />
           <li><a href="">About Us</a></li>
@@ -205,10 +205,10 @@
           <li><a href="">Buy Theme</a></li>
         </div>
 
-        <div id="social">
+        <div class="social">
           <h3>WE ARE SOCIAL</h3>
           <br />
-          <div id="icon">
+          <div class="icon">
             <img src="images\twitter.png" alt="" height="30px" width="30px" />
             <img src="images\facebook.png" alt="" height="30px" width="30px" />
             <img src="images\vimeo.png" alt="" height="30px" width="30px" />
