--- a/shop.html
+++ b/shop.html
@@ -16,27 +16,27 @@
     <div id="container">
       <div id="one">
         <!-- Navbar -->
-        <nav id="navbar">
+        <nav class="navbar">
           <div>
             <img
-              id="logo"
+              class="logo"
               src="images\logo.png"
               alt=""
               height="40px"
               width="40px"
             />
           </div>
-          <div id="nav-list">
-            <li><a href="">HOME</a></li>
-            <li><a href="">SHOP</a></li>
-            <li><a href="">ABOUT</a></li>
+          <div class="nav-list">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="shop.html">SHOP</a></li>
+            <li><a href="about.html">ABOUT</a></li>
             <li><a href="">FAQ</a></li>
             <li><a href="">CONTACT</a></li>
           </div>
-          <div id="search">
+          <div class="search">
             <img src="images\search.png" alt="" height="20px" width="20px" />
           </div>
-          <div id="cart">
+          <div class="cart">
             <img
               src="images\shopping-bag.png"
               alt=""
@@ -53,7 +53,7 @@
 
       <!-- two -->
       <div id="four">
-        <div id="card1">
+        <div class="card1">
           <img src="images\tune.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -61,7 +61,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\movedo.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -69,7 +69,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\sofa.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -79,7 +79,7 @@
 
         <!-- three -->
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\leather.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -87,7 +87,7 @@
           <p>$60.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\leviatar.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -95,7 +95,7 @@
           <p>$48.90</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\table.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -105,7 +105,7 @@
 
         <!-- Four -->
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\card1.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -113,7 +113,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img
             src="images\gramaphone.jpg"
             alt=""
@@ -126,7 +126,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\card3.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -136,7 +136,7 @@
 
         <!-- Five -->
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\card4.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -152,7 +152,7 @@
           <p>$129.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\card6.jpg" alt="" height="350px" width="350px" />
           <br />
           <br />
@@ -173,7 +173,7 @@
           <p>Exclusive house decor and much more</p>
           <br />
           <br />
-          <button id="btn-1"><b>Start Your Journey</b></button>
+          <button class="btn-1"><b>Start Your Journey</b></button>
         </div>
       </div>
 
@@ -181,24 +181,32 @@
 
       <footer>
         <div id="foot">
-          <div id="foot-1">
+          <div class="foot-1">
             <h1>
               <b>Be the first to Know</b>&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;
               &nbsp;
             </h1>
           </div>
-          <div id="foot-2">
-            <input id="input" type="text" placeholder="Your Name(Required)" />
+          <div class="foot-2">
+            <input
+              class="input"
+              type="text"
+              placeholder="Your Name(Required)"
+            />
             <br />
             <br />
             <div class="line"></div>
           </div>
-          <div id="foot-3">
-            <input id="input" type="text" placeholder="Your Email(Required)" />
+          <div class="foot-3">
+            <input
+              class="input"
+              type="text"
+              placeholder="Your Email(Required)"
+            />
             <br /><br />
             <div class="line"></div>
           </div>
-          <div id="foot-4">
+          <div class="foot-4">
             <p style="font-size: 12px">
               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;SEND YOUR MESSAGE
             </p>
@@ -208,7 +216,7 @@
 
         <!-- support -->
         <div id="help">
-          <div id="support">
+          <div class="support">
             <h3>SUPPORT</h3>
             <br />
             <li><a href="">Help</a></li>
@@ -217,7 +225,7 @@
             <li><a href="">Contact us</a></li>
           </div>
 
-          <div id="meet">
+          <div class="meet">
             <h3>MEET MOVEDO</h3>
             <br />
             <li><a href="">About Us</a></li>
@@ -226,10 +234,10 @@
             <li><a href="">Buy Theme</a></li>
           </div>
 
-          <div id="social">
+          <div class="social">
             <h3>WE ARE SOCIAL</h3>
             <br />
-            <div id="icon">
+            <div class="icon">
               <img src="images\twitter.png" alt="" height="30px" width="30px" />
               <img
                 src="images\facebook.png"
