--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <div id="container">
       <div id="one">
         <!-- Navbar -->
-        <nav id="navbar">
+        <nav class="navbar">
           <div>
             <img
-              id="logo"
+              class="logo"
               src="images\logo.png"
               alt=""
               height="40px"
               width="40px"
             />
           </div>
-          <div id="nav-list">
+          <div class="nav-list">
             <li><a href="index.html">HOME</a></li>
             <li><a href="shop.html">SHOP</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="">FAQ</a></li>
             <li><a href="">CONTACT</a></li>
           </div>
-          <div id="search">
+          <div class="search">
             <img src="images\search.png" alt="" height="20px" width="20px" />
           </div>
-          <div id="cart">
+          <div class="cart">
             <img
               src="images\shopping-bag.png"
               alt=""
@@ -46,10 +46,10 @@
           </div>
         </nav>
         <!-- Navbar -->
-        <div id="h1">
+        <div class="h1">
           <h1>Exclusive and <br />Unique Products</h1>
         </div>
-        <div id="para">
+        <div class="para">
           <p>
             The European languages are members of the same family. <br />Their
             separate existence is a myth. For science, music,<br />
@@ -57,11 +57,11 @@
           </p>
         </div>
         <div id="btn1">
-          <button id="btn"><b>Start Your Journey</b></button>
+          <button class="btn"><b>Start Your Journey</b></button>
         </div>
         <div>
           <img
-            id="tune"
+            class="tune"
             src="images\Runwell-Turntable.png"
             alt=""
             height="50%"
@@ -72,7 +72,7 @@
       <!-- 2ns section -->
 
       <div id="two">
-        <div id="card2">
+        <div class="card2">
           <img src="images\icon-01.png" alt="" height="70px" width="80px" />
           <h3>Always secure Payments</h3>
           <p>
@@ -81,7 +81,7 @@
           </p>
         </div>
 
-        <div id="card2">
+        <div class="card2">
           <img src="images\icon-02.png" alt="" height="70px" width="80px" />
           <h3>Always secure Payments</h3>
           <p>
@@ -90,7 +90,7 @@
           </p>
         </div>
 
-        <div id="card2">
+        <div class="card2">
           <img src="images\icon-03.png" alt="" height="70px" width="80px" />
           <h3>Always secure Payments</h3>
           <p>
@@ -104,20 +104,20 @@
 
       <div id="three">
         <div>
-          <h1 id="content">
+          <h1 class="content">
             Best Selling <br />
             This Week
           </h1>
         </div>
 
-        <div id="box1">
+        <div class="box1">
           <img src="images\tune.jpg" alt="" height="170px" width="170px" />
           <br />
           <br />
           <p style="font-size: 16px"><b>RUNWELL TABLE</b></p>
           <p>$225.00</p>
         </div>
-        <div id="box2">
+        <div class="box2">
           <img src="images\movedo.jpg" alt="" height="170px" width="170px" />
           <br />
           <br />
@@ -125,7 +125,7 @@
           <p><del>$199.00 </del>$99.00</p>
           <h2></h2>
         </div>
-        <div id="box3">
+        <div class="box3">
           <img src="images\sofa.jpg" alt="" height="170px" width="170px" />
           <br />
           <br />
@@ -136,7 +136,7 @@
 
       <!-- Four -->
       <div id="four">
-        <div id="card1">
+        <div class="card1">
           <img src="images\card1.jpg" alt="" height="444px" width="358px" />
           <br />
           <br />
@@ -144,7 +144,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img
             src="images\gramaphone.jpg"
             alt=""
@@ -157,7 +157,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\card3.jpg" alt="" height="444px" width="358px" />
           <br />
           <br />
@@ -168,7 +168,7 @@
 
       <!-- Five -->
       <div id="five">
-        <div id="card1">
+        <div class="card1">
           <img src="images\card4.jpg" alt="" height="444px" width="358px" />
           <br />
           <br />
@@ -176,7 +176,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\card5.jpg" alt="" height="444px" width="358px" />
           <br />
           <br />
@@ -184,7 +184,7 @@
           <p>$59.00</p>
         </div>
 
-        <div id="card1">
+        <div class="card1">
           <img src="images\card6.jpg" alt="" height="444px" width="358px" />
           <br />
           <br />
@@ -205,7 +205,7 @@
           <p>Exclusive house decor and much more</p>
           <br />
           <br />
-          <button id="btn-1"><b>Start Your Journey</b></button>
+          <button class="btn-1"><b>Start Your Journey</b></button>
         </div>
       </div>
     </div>
@@ -214,23 +214,23 @@
 
     <footer>
       <div id="foot">
-        <div id="foot-1">
+        <div class="foot-1">
           <h1>
             <b>Be the first to Know</b>&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;
           </h1>
         </div>
-        <div id="foot-2">
-          <input id="input" type="text" placeholder="Your Name(Required)" />
+        <div class="foot-2">
+          <input class="input" type="text" placeholder="Your Name(Required)" />
           <br />
           <br />
           <div class="line"></div>
         </div>
-        <div id="foot-3">
-          <input id="input" type="text" placeholder="Your Email(Required)" />
+        <div class="foot-3">
+          <input class="input" type="text" placeholder="Your Email(Required)" />
           <br /><br />
           <div class="line"></div>
         </div>
-        <div id="foot-4">
+        <div class="foot-4">
           <p style="font-size: 12px">
             &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;SEND YOUR MESSAGE
           </p>
@@ -240,7 +240,7 @@
 
       <!-- support -->
       <div id="help">
-        <div id="support">
+        <div class="support">
           <h3>SUPPORT</h3>
           <br />
           <li><a href="">Help</a></li>
@@ -249,7 +249,7 @@
           <li><a href="">Contact us</a></li>
         </div>
 
-        <div id="meet">
+        <div class="meet">
           <h3>MEET MOVEDO</h3>
           <br />
           <li><a href="">About Us</a></li>
@@ -258,10 +258,10 @@
           <li><a href="">Buy Theme</a></li>
         </div>
 
-        <div id="social">
+        <div class="social">
           <h3>WE ARE SOCIAL</h3>
           <br />
-          <div id="icon">
+          <div class="icon">
             <img src="images\twitter.png" alt="" height="30px" width="30px" />
             <img src="images\facebook.png" alt="" height="30px" width="30px" />
             <img src="images\vimeo.png" alt="" height="30px" width="30px" />
